--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,10 @@
 <%- include("partials/header") -%>
 
 <h1><a href="https://www.goodreads.com/book/show/1215032.The_Wise_Man_s_Fear"> The Wise Man's Fear</a></h1>
-<p><%= firstContent %></p>
+<p>"There are three things all wise men fear: the sea in storm, a night with no moon, and the anger of a gentle man."</p>
+
+<h1><%= bookTitle %></h1>
+<p> <%= quote %></p>
 
 
 <%- include("partials/footer") -%>
